@@ -338,9 +338,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabHistory
+        ActivePage = TabAddresses
         Align = alClient
-        TabIndex = 1
+        TabIndex = 0
         TabOrder = 0
         object TabAddresses: TTabSheet
           Caption = 'Addresses'
@@ -1061,9 +1061,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabOpt_Wallet
+        ActivePage = TabSheet5
         Align = alClient
-        TabIndex = 0
+        TabIndex = 3
         TabOrder = 0
         object TabOpt_Wallet: TTabSheet
           Caption = 'Wallet'
@@ -2311,9 +2311,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabNodes
+        ActivePage = TabMonitorMonitor
         Align = alClient
-        TabIndex = 4
+        TabIndex = 2
         TabOrder = 0
         object TabDebug_Log: TTabSheet
           Caption = 'Log'
